Stick DI and Shield pushback added
Documentation updated as well
